--- a/test/Makefile
+++ b/test/Makefile
@@ -61,6 +61,7 @@ OBJ := \
 	$(OUT_DIR)/mkv.o \
 	$(OUT_DIR)/mp4.o \
 	$(OUT_DIR)/ogg.o \
+	$(OUT_DIR)/wav.o \
 	$(OUT_DIR)/compat.o
 
 all: $(TESTER)
