--- a/test/Makefile
+++ b/test/Makefile
@@ -50,14 +50,13 @@ FFBASE_DIR := $(ROOT)/ffbase
 HDR := $(wildcard $(AVPACK_DIR)/avpack/*.h)
 
 OUT_DIR := $(AVPACK_DIR)/test
-
 TESTER := $(OUT_DIR)/avpack-test
 ifeq ($(OS),win)
 	TESTER := $(OUT_DIR)/avpack-test.exe
 endif
-
 OBJ := \
 	$(OUT_DIR)/main.o \
+	$(OUT_DIR)/mkv.o \
 	$(OUT_DIR)/mp4.o \
 	$(OUT_DIR)/ogg.o \
 	$(OUT_DIR)/compat.o
